--- a/index.html
+++ b/index.html
@@ -4,14 +4,9 @@
     <meta charset="UTF-8">
     <title>Effective JavaScript: Frogger</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
 </head>
 <body>
-    <div id="loser">
-        <span><h1>You Lost!</h1></span>
-    </div>
-    <div id="winner">
-        <span><h1>You Won!</h1></span>
-    </div>
 	<!-- Load Scripts -->
     <script src="js/resources.js"></script>
     <script src="js/engine.js"></script>
